--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
   <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/chicken_pot_pie.html">Chicken Pot Pie</a>
+    <ul>
+      <li><a href="./recipes/chicken_pot_pie.html">Chicken Pot Pie</a></li>
+      <li><a href="./recipes/pasta_salad.html">Pasta Salad</a></li>
+      <li></li>
+    </ul>
   </body>
 </html>
