--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
       <li><a href="./recipes/chicken_pot_pie.html">Chicken Pot Pie</a></li>
       <li><a href="./recipes/pasta_salad.html">Pasta Salad</a></li>
-      <li></li>
+      <li><a href="./recipes/air_fryer_tilapia.html">Air Fryer Tilapia</a></li>
     </ul>
   </body>
 </html>
