Move images folder to parent directory

--- a/recipes/air_fryer_tilapia.html
+++ b/recipes/air_fryer_tilapia.html
@@ -7,7 +7,7 @@
 
   <body>
     <h1>Air Fryer Tilapia</h1>
-    <img src="./images/air_fryer_tilapia.jpg" alt="Air Fried Tilapia" />
+    <img src="../images/air_fryer_tilapia.jpg" alt="Air Fried Tilapia" />
 
     <h2>Description</h2>
     <p>
