--- a/recipes/chicken_pot_pie.html
+++ b/recipes/chicken_pot_pie.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Chicken Pot Pie</h1>
-    <img src="./images/chicken_pot_pie.jpeg" alt="Chicken Pot Pie" />
+    <img src="../images/chicken_pot_pie.jpeg" alt="Chicken Pot Pie" />
 
     <h2>Description</h2>
     <p>
