--- a/recipes/pasta_salad.html
+++ b/recipes/pasta_salad.html
@@ -7,7 +7,7 @@
 
   <body>
     <h1>Pasta Salad</h1>
-    <img src="./images/pasta_salad.jpg" alt="Pasta Salad" />"
+    <img src="../images/pasta_salad.jpg" alt="Pasta Salad" />"
 
     <h2>Description</h2>
     <p>
